--- a/ChurFindsEdit.ui
+++ b/ChurFindsEdit.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>750</height>
+    <height>760</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Edit Current Listing</string>
@@ -34,8 +40,8 @@ QWidget#centralwidget {
      <rect>
       <x>90</x>
       <y>255</y>
-      <width>251</width>
-      <height>41</height>
+      <width>241</width>
+      <height>45</height>
      </rect>
     </property>
     <property name="font">
@@ -57,7 +63,7 @@ background-color: white;</string>
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>20</y>
+      <y>0</y>
       <width>1118</width>
       <height>121</height>
      </rect>
@@ -104,7 +110,7 @@ background-color: white;</string>
      <rect>
       <x>60</x>
       <y>110</y>
-      <width>461</width>
+      <width>691</width>
       <height>101</height>
      </rect>
     </property>
@@ -206,7 +212,7 @@ font-size: 8pt;
      <rect>
       <x>90</x>
       <y>465</y>
-      <width>161</width>
+      <width>300</width>
       <height>51</height>
      </rect>
     </property>
@@ -230,7 +236,7 @@ font-size: 8pt;
      <rect>
       <x>90</x>
       <y>210</y>
-      <width>161</width>
+      <width>300</width>
       <height>51</height>
      </rect>
     </property>
@@ -254,8 +260,8 @@ font-size: 8pt;
      <rect>
       <x>90</x>
       <y>425</y>
-      <width>251</width>
-      <height>41</height>
+      <width>241</width>
+      <height>45</height>
      </rect>
     </property>
     <property name="font">
@@ -278,7 +284,7 @@ background-color: white;</string>
      <rect>
       <x>370</x>
       <y>465</y>
-      <width>161</width>
+      <width>300</width>
       <height>51</height>
      </rect>
     </property>
@@ -302,8 +308,8 @@ background-color: white;</string>
      <rect>
       <x>90</x>
       <y>510</y>
-      <width>251</width>
-      <height>41</height>
+      <width>241</width>
+      <height>45</height>
      </rect>
     </property>
     <property name="font">
@@ -324,7 +330,7 @@ background-color: white;</string>
    <widget class="QPushButton" name="CancelButton">
     <property name="geometry">
      <rect>
-      <x>760</x>
+      <x>750</x>
       <y>620</y>
       <width>181</width>
       <height>61</height>
@@ -392,8 +398,8 @@ font-size: 8pt;
      <rect>
       <x>650</x>
       <y>510</y>
-      <width>251</width>
-      <height>41</height>
+      <width>241</width>
+      <height>45</height>
      </rect>
     </property>
     <property name="font">
@@ -416,7 +422,7 @@ background-color: white;</string>
      <rect>
       <x>650</x>
       <y>465</y>
-      <width>161</width>
+      <width>300</width>
       <height>51</height>
      </rect>
     </property>
@@ -440,8 +446,8 @@ background-color: white;</string>
      <rect>
       <x>90</x>
       <y>340</y>
-      <width>251</width>
-      <height>41</height>
+      <width>241</width>
+      <height>45</height>
      </rect>
     </property>
     <property name="font">
@@ -453,7 +459,39 @@ background-color: white;</string>
     <property name="styleSheet">
      <string notr="true">border-radius: 5px;
 border: 1px solid gray; 
-background-color: white;</string>
+color: black;
+
+QComboBox QAbstractItemView {
+    /* Ensures items are black against the default white/light background */
+    color: black;
+    /* Optional: Sets the background color of the list panel itself */
+    background-color: black; 
+}
+
+/* 2. CRITICAL: Forces text to black when the item is selected/highlighted */
+QComboBox QAbstractItemView::item:selected {
+    /* Background color of the item when hovered/selected (using your highlight color) */
+    background-color: #50a5ff; 
+	color: rgb(80, 165, 255);
+    
+    /* *** This is the core fix *** */
+    color: black;
+}
+
+/* 3. Ensures the text visible in the closed combobox itself is black */
+QComboBox {
+    color: black;
+    /* You can put your border and radius styles here */
+    border-radius: 8px;
+    border: 1px solid gray;
+    background-color: black; 
+}
+
+/* 4. Ensures the area around the selected item is not white */
+QComboBox::drop-down {
+    /* Ensure the button area doesn't interfere */
+    subcontrol-origin: padding;
+}</string>
     </property>
     <property name="currentText">
      <string/>
@@ -489,8 +527,8 @@ background-color: white;</string>
      <rect>
       <x>370</x>
       <y>510</y>
-      <width>251</width>
-      <height>41</height>
+      <width>241</width>
+      <height>45</height>
      </rect>
     </property>
     <property name="font">
@@ -513,7 +551,7 @@ background-color: white;</string>
      <rect>
       <x>370</x>
       <y>255</y>
-      <width>531</width>
+      <width>521</width>
       <height>211</height>
      </rect>
     </property>
@@ -537,7 +575,7 @@ background-color: white;</string>
      <rect>
       <x>50</x>
       <y>199</y>
-      <width>890</width>
+      <width>881</width>
       <height>390</height>
      </rect>
     </property>
@@ -566,7 +604,7 @@ background-color: white;</string>
      <rect>
       <x>90</x>
       <y>295</y>
-      <width>371</width>
+      <width>300</width>
       <height>51</height>
      </rect>
     </property>
@@ -590,7 +628,7 @@ background-color: white;</string>
      <rect>
       <x>90</x>
       <y>380</y>
-      <width>161</width>
+      <width>300</width>
       <height>51</height>
      </rect>
     </property>
@@ -636,7 +674,7 @@ background-color: white;</string>
      <x>0</x>
      <y>0</y>
      <width>1000</width>
-     <height>18</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
