--- a/ChurFindsUI.ui
+++ b/ChurFindsUI.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>1119</width>
-    <height>750</height>
+    <height>760</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -41,8 +41,8 @@ QWidget#centralwidget {
    <widget class="QLabel" name="CompanyName">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>10</y>
+      <x>150</x>
+      <y>0</y>
       <width>551</width>
       <height>121</height>
      </rect>
@@ -108,26 +108,26 @@ QWidget#centralwidget {
      <rect>
       <x>50</x>
       <y>200</y>
-      <width>890</width>
+      <width>891</width>
       <height>390</height>
      </rect>
     </property>
     <property name="sizePolicy">
-     <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+     <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="font">
      <font>
-      <pointsize>12</pointsize>
+      <pointsize>10</pointsize>
      </font>
     </property>
    </widget>
    <widget class="QPushButton" name="DeleteListingButton">
     <property name="geometry">
      <rect>
-      <x>760</x>
+      <x>765</x>
       <y>620</y>
       <width>101</width>
       <height>41</height>
@@ -349,7 +349,7 @@ font-size: 8pt;
      <x>0</x>
      <y>0</y>
      <width>1119</width>
-     <height>18</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuChur_Finds_Marketplace">
