--- a/ChurFindsAdd.ui
+++ b/ChurFindsAdd.ui
@@ -258,10 +258,10 @@ font-size: 8pt;
    <widget class="QTextEdit" name="ListingPriceInput">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>425</y>
-      <width>241</width>
-      <height>45</height>
+      <x>129</x>
+      <y>428</y>
+      <width>201</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="font">
@@ -272,7 +272,7 @@ font-size: 8pt;
     </property>
     <property name="styleSheet">
      <string notr="true">border-radius: 5px;
-border: 1px solid gray; 
+border: 0px solid white; 
 background-color: white;</string>
     </property>
     <property name="frameShadow">
@@ -457,39 +457,24 @@ background-color: white;</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-radius: 5px;
-border: 1px solid gray; 
-background-color: white;
-
-QComboBox QAbstractItemView {
-    /* Ensures items are black against the default white/light background */
-    color: black;
-    /* Optional: Sets the background color of the list panel itself */
-    background-color: white; 
-}
-
-/* 2. CRITICAL: Forces text to black when the item is selected/highlighted */
-QComboBox QAbstractItemView::item:selected {
-    /* Background color of the item when hovered/selected */
-    background-color: #50a5ff; 
-    
-    /* *** This is the core fix *** */
-    color: black;
-}
-
-/* 3. Ensures the text visible in the closed combobox itself is black */
-QComboBox {
-    color: black;
-    /* You can put your border and radius styles here */
+     <string notr="true">QComboBox {
     border-radius: 8px;
     border: 1px solid gray;
 }
 
-/* 4. Ensures the area around the selected item is not white */
-QComboBox::drop-down {
-    /* Ensure the button area doesn't interfere */
-    subcontrol-origin: padding;
-}</string>
+QComboBox QAbstractItemView {
+    background-color: white;
+    color: white; 
+    selection-background-color: #50a5ff;
+    selection-color: white; 
+    border: 1px solid #385B75;
+}
+
+QComboBox QAbstractItemView::item:selected {
+    background-color: #50a5ff; 
+    color: white;
+}
+</string>
     </property>
     <property name="currentText">
      <string/>
@@ -645,6 +630,54 @@ background-color: white;</string>
      <string>Listing Price</string>
     </property>
    </widget>
+   <widget class="QLabel" name="DollarSign">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>423</y>
+      <width>16</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Calibri</family>
+      <pointsize>10</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(0, 0, 0);</string>
+    </property>
+    <property name="text">
+     <string>$</string>
+    </property>
+   </widget>
+   <widget class="QFrame" name="frame">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>425</y>
+      <width>241</width>
+      <height>45</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 5px;
+border: 1px solid gray; 
+background-color: white;</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+   </widget>
    <zorder>listWidget</zorder>
    <zorder>ListingNameInput</zorder>
    <zorder>CompanyName</zorder>
@@ -653,7 +686,6 @@ background-color: white;</string>
    <zorder>listingDescriptionLabel</zorder>
    <zorder>listingSNameLabel</zorder>
    <zorder>listingNameLabel</zorder>
-   <zorder>ListingPriceInput</zorder>
    <zorder>listingSPhoneLabel</zorder>
    <zorder>ListingSNameInput</zorder>
    <zorder>CancelButton</zorder>
@@ -665,6 +697,9 @@ background-color: white;</string>
    <zorder>ListingDescInput</zorder>
    <zorder>listingConditionLabel</zorder>
    <zorder>listingPriceLabel</zorder>
+   <zorder>frame</zorder>
+   <zorder>ListingPriceInput</zorder>
+   <zorder>DollarSign</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
